Move `sass2css` inside `bin/`
	renamed:    sass2css.php -> bin/sass2css
	modified:   composer.json

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,6 @@
       "email": "alejandro@roetal.com"
     }
   ],
-  "bin": ["bin/sass2css.php"],
+  "bin": ["bin/sass2css"],
   "minimum-stability": "dev"
 }
